plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

shadowJar {
    archiveBaseName.set('hw03-annotation')
    archiveVersion.set('0.1')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class':'ru.otus.Main'
    }
}

tasks.build.dependsOn tasks.shadowJar